Adicionada imagem na página de capa, por enquanto no botão dashboard.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %} Integrador {% endblock %}
+{% block title %} Gestão Inteligente de Recursos {% endblock %}
 
 {% block content %}
 
-<h1>Integrador</h1>
+<h1 class="landing_title">Gestão Inteligente de Equipamentos</h1>
+<div class="landing">
+    <img src="../static/images/landing.svg" alt="Plataforma de Agendamento Inteligente">
+</div>
 
 {% endblock %}
