--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='css/manager.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='css/reservations.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
         <title>{% block title %}{% endblock %}</title>
         <script src="https://kit.fontawesome.com/22e5ea0d80.js" crossorigin="anonymous"></script>    
     </head>
