--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,6 @@
 :root
 {
-  --cor0: rgb(0,0,0);
+  /* --cor0: rgb(0,0,0);
   --cor1: rgb(255,255,255);
   --cor2: rgb(0,100,200);
   --cor3: teal;
@@ -14,7 +14,39 @@
   --cor14: rgb(255,200,200);
   --cor15: rgb(250,150,250);
 
-  --cor20: rgb(82,82,82);
+  --cor20: rgb(82,82,82); */
+
+  --cor1:  #000000;
+  --cor10: #000000;
+  --cor11: #303030;
+  --cor12: #606060;
+  --cor13: #909090;
+  --cor14: #C0C0C0;
+  --cor15: #F0F0F0;
+
+  --cor2:  #FFFFFF;
+  --cor20: #FFFFFF;
+  --cor21: #CFCFCF;
+  --cor22: #9F9F9F;
+  --cor23: #6F6F6F;
+  --cor24: #3F3F3F;
+  --cor25: #0F0F0F;
+
+  --cor3:  #008080;
+  --cor30: #00F0F0;
+  --cor31: #00C0C0;
+  --cor32: #00A0A0;
+  --cor33: #008080;
+  --cor34: #006060;
+  --cor35: #004040;
+
+  --cor4:  #800080;
+  --cor40: #F000F0;
+  --cor41: #C000C0;
+  --cor42: #A000A0;
+  --cor43: #800080;
+  --cor44: #600060;
+  --cor45: #400040;
 }
 
 *
