--- a/app/templates/user_login.html
+++ b/app/templates/user_login.html
@@ -20,7 +20,7 @@
     {{ form_login.email( placeholder="usuario@email.com", maxlength="50" ) }}
     {{ form_login.password( placeholder="Senha", maxlength="10") }}
     <input type="submit" value="Entrar" id="pwd_btn">
-    <h5><a href="/newuser">Criar uma conta</a></h5>
+    <h5><a href="/create_user">Criar uma conta</a></h5>
 
 </form>
 
