--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,9 +58,9 @@
                 <li>
                     <a href="/cars_manager">
                         <i class="fa-solid fa-cart-flatbed"></i>
-                        <span class="links_name">Ger.Carrinhos</span>
+                        <span class="links_name">Ger.Equipamentos</span>
                     </a>
-                    <span class="tooltip">Ger.Carrinhos</span>
+                    <span class="tooltip">Ger.Equip.</span>
                 </li>
                 {% endif %}
                 {% if 'username' in session: %}
