--- a/app/templates/reservations.html
+++ b/app/templates/reservations.html
@@ -21,16 +21,16 @@
         </tr>
         {% for registro in lst %}
         <tr>
-            {% for i in registro: %}
-                {% if i == 'm' or i == 't' or i == 'n':%}
+            <td>{{registro[1]}}</td>
+            {% for i in range(2,5): %}
+                {% if registro[i] == 'm' or registro[i] == 't' or registro[i] == 'n':%}
             <td> </td>
                 {% else:%}
             <td> 
-                {{i}} 
-                <!-- <svg class="svgscheduling" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"> -->
-                    <!-- <path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"/> -->
-                <!-- </svg> -->
-
+                <!-- {{registro[i]}}  -->
+                <svg class="svgscheduling" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"/>
+                </svg>
             </td>
                 {% endif %}
             {% endfor %}
