Add API para consulta de usuários, equipamentos e agendamentos

--- a/app/api/templates/help.html
+++ b/app/api/templates/help.html
@@ -4,12 +4,20 @@
 
 {% block content %}
 
-    <h1>API - Help</h1>
-
-    <h2> Acessar esta página de ajuda </h2>
-    <p> https://integrado.herokuapp.com/api/help </p>
-
-    <h2> Listar usuários cadastrados na plataforma (formato JSON). </h2>
-    <p> https://integrado.herokuapp.com/api/users </p>
+    <h1 style="margin-left: 100px; margin-top: 20px;">API - Help</h1>
+    <br>
+    <ul style="margin-left: 150px">
+        <li><h2>Acessar esta página de ajuda</h2></li>
+            <ul><li><h3> https://integrado.herokuapp.com/api/help </h3></li></ul>
+        <br>
+        <li><h2>Listar usuários</h2></li>
+            <ul><li><h3>https://integrado.herokuapp.com/api/users</h3></li></ul>
+        <br>
+        <li><h2>Listar equipamentos</h2></li>
+            <ul><li><h3>https://integrado.herokuapp.com/api/equipment</h3></li></ul>
+        <br>
+        <li><h2>Listar agendamentos</h2></li>
+            <ul><li><h3>https://integrado.herokuapp.com/api/agenda</h3></li></ul>
+    </ul>
 
 {% endblock %}
